--- a/arthall/src/main/webapp/css/ticketing.css
+++ b/arthall/src/main/webapp/css/ticketing.css
@@ -1,4 +1,4 @@
-@charset 'UTF8';
+@charset 'uft-8';
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
 @import url(reset.css);
