--- a/arthall/src/main/webapp/css/header.css
+++ b/arthall/src/main/webapp/css/header.css
@@ -1,5 +1,4 @@
-@charset "utf-8";
-
+@charset "UTF-8";
 #gomain{
     position: absolute;
     left: 0;top: -122.63px;
@@ -27,14 +26,16 @@ header{
 }
 
 .header-inner{
-    width: 1260px;
+    position: relative;
+    max-width: 1260px;
     margin: 0 auto;
-    padding: 20px 30px;
+    padding: 0 30px 0;
 }
 .header-inner h1{
     float: left; 
     width: 15%;
-    margin-top: 2%;
+/*    margin-top: 2%;*/
+    margin-top: 20px;
 }
 .header-inner h1 a{
     display: block;
@@ -45,12 +46,18 @@ header{
 }
 .header-inner .right_nav{
     float: left; 
-    width: 60%;
-    margin-left: 5%;
+    width: 64%;
+    margin-left: 1.5%;
 }
 .right_nav .tnb{
+    position: absolute;
+
+    top: 10px;
+    right: 30px;
+/*
     float: right;
     margin: 10px -250px 15px 0;
+*/
 }
 .right_nav .tnb:after{
     display: block;
@@ -60,20 +67,24 @@ header{
 .right_nav .tnb li {
     float: left;
     margin-left: 10px;
-    font-size: 13px;
+    font-size: 1.3rem;
     color: #fff;
 }
+.tnb li a{transition:all 0.3s;}
 .tnb li a:hover, 
 .tnb li a:focus{
-    color:#222;
+    color:#f43232;
+    font-weight:bold;
 }
 
 .gnb{
     float: left;
     width: 100%;
-    margin-top: 5%;
+/*    margin-top: 5%;*/
+    margin-top: 35px;
     font-weight:bold;
-    font-size:18px;
+    font-size:1.6rem;
+    word-break: keep-all;
 }
 .gnb .hover{
     float: left;
@@ -104,7 +115,7 @@ header{
 }
 .gnb .hover > ul{
     height: 0;
-    font-size: 14px;
+    font-size: 1.4rem;
     opacity: 0;
     visibility: hidden;
     transition: all 0.5s;
@@ -121,23 +132,24 @@ header{
 }
 
 .search{
-    margin: 3% 0 0 0;
+/*    margin: 3% 0 0 0;*/
     float: right;
-    width: 250px;
+/*    width: 250px;*/
+    width: 19.1131%;
     height: 30px;
+    margin-top: 35px;
     position:relative;
 }
+
 .search .t_box{
     position:absolute;
     width: 100%;
     height: 100%;
+    padding-left:2rem;
     z-index:99;
     border-radius:15px;
     border:none;
-    color:#fff;
-}
-.search .t_box::placeholder{
-    color:#fff;
+    background: #fff;
 }
 .search .submit{
     position:absolute;
@@ -150,3 +162,12 @@ header{
     right:0;
 }
 .search .submit i{color:#fff;}
+
+.mobile__openBtn{display: none;}
+.mobile__closeBtn{display: none;}
+
+/*
+@media all and (max-width:1143px){
+    .gnb{font-size: 1.4rem;}
+}
+*/
