FRONT END 팀에서 받은 HTML 변환

--- a/arthall/src/main/webapp/css/findPassword.css
+++ b/arthall/src/main/webapp/css/findPassword.css
@@ -1,4 +1,4 @@
-@charset 'uft-8';
+@charset "UTF-8";
 
 @import url(reset.css);
 @import url(header.css);
@@ -8,29 +8,28 @@
 .sub__tit{
     position: relative;
     height: 350px;
-    background: #ccc;
+    background:url(../img/topBg/topBg_member.jpg);
 }
 .sub__tit h2{
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 50%;
     text-align: center;
     transform: translateX(-50%);
+    font-size:24px;
+    font-weight:bold;
+    color:#fff;
 }
 
 .sub__container{
-    width: 1260px;
+    max-width: 1260px;
     height: auto;
-    margin: 0 auto;
+    margin: 50px auto;
 }
+
 
 /*main{width: 1060px;}*/
 
-main .main__siteLoad{padding: 5px;}
-.main__siteLoad a{
-    display: inline-block;
-    font-size: 13px;
-}
 
 main .main__content{
     padding: 50px 0;
@@ -38,13 +37,14 @@ main .main__content{
 }
 
 .content__innerConts .innerConts__tit{
-    font-size: 50px;
-    margin-bottom: 30px;
+    font-size: 42px;
+    font-weight:bold;
+    margin-bottom: 20px;
 }
 
 .content__innerConts > p{
     margin-bottom:50px;
-    font-size: 14px;
+    font-size: 16px;
     word-break: keep-all;
 }
 
@@ -62,7 +62,7 @@ main .main__content{
     content: '';
     width: 100%;
     height: 1px;
-    background: #4d4d4d;
+    background: #222;
 }
 
 .cont__find .find__list li{
@@ -70,13 +70,13 @@ main .main__content{
     width: 50%;
     background: #aaa;
     color: #fff;
-    border-bottom: 1px solid #4d4d4d;
+    border-bottom: 1px solid #222;
     box-sizing: border-box;
 }
 .cont__find .find__list li.on{
     background: #fff;
-    color: #4d4d4d;
-    border: 1px solid #4d4d4d;
+    color: #222;
+    border: 1px solid #222;
     border-bottom: none;
 }
 .find__list li > a{
@@ -92,7 +92,10 @@ main .main__content{
     height: 50px;
     line-height: 50px;
     margin-bottom: 20px;
-    border: 1px solid #4d4d4d;
+    border: 1px solid #222;
+}
+.info__inputs li:hover{
+    background-color:#eee;
 }
 .info__inputs li:last-child{margin-bottom: 0;}
 
@@ -103,7 +106,7 @@ main .main__content{
 }
 .info__inputs li label{
     width: 15%;
-    background: #4d4d4d;
+    background: #222;
     color: #fff;
 }
 .info__inputs li input{
@@ -115,7 +118,44 @@ form .form__submit{
     width: 100%;
     height: 50px;
     line-height: 50px;
-    background: #4d4d4d;
+    background: #222;
+    font-size:18px;
     color: #fff;
     box-sizing: border-box;
+    cursor: pointer;
+    transition:all 0.5s;
+}
+form .form__submit:hover{
+    background:#d32e2e;
+    color:#fff; 
+}
+
+/*비밀번호찾기 결과창*/
+.innerConts__cont .pwResult{
+    width:500px;
+    height:200px;
+    font-size:16px;
+}
+.innerConts__cont .pwResult span{
+    font-size:24px;
+    font-weight:bold;
+    color:#d32e2e;
+}
+.pwResultBtn{width:500px;height:100px;}
+.pwResultBtn a{
+    display:block;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 10px;
+    background: #222;
+    color: #fff;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size:18px;
+    transition:all 0.5s
+}
+.pwResultBtn a:hover{
+    background-color:#d32e2e;
+    color:#fff;
 }
