--- a/arthall/src/main/webapp/css/main.css
+++ b/arthall/src/main/webapp/css/main.css
@@ -116,7 +116,7 @@
 .mainVisual .bg3 .textView p a{color:#800000;}
 .mainVisual .bg3 .textView p a:hover{background:#B22222;color:#FFB6C1;}
 .mainVisual .bg4 .textView p a{color:#9ACD32;}
-.mainVisual .bg4 .textView p a:hover{background:#6B8E23;color:#F0FFF0;}
+.mainVisual .bg4 .textView p a:hover{background:#6B8E23;color:#F0FFF0;}}
 .mainVisual .bg5 .textView p a{color:#663399;}
 .mainVisual .bg5 .textView p a:hover{background:#8656a2;color:#D8BFD8;}
 
@@ -181,7 +181,7 @@
 /*메인 퀵아이콘*/
 
 main section .section__wrap{
-    max-width: 1460px;
+    max-width: 1260px;
     margin: 0 auto;
 }
 
@@ -363,7 +363,6 @@ main .icons{padding: 50px 0;}
     left: 0;
     bottom: 10px;
 }
-
 .news .cont{
     width: 70%;
     height: 100%;
@@ -373,7 +372,7 @@ main .icons{padding: 50px 0;}
 
 .news .cont table{
     width: 100%;
-    height: 20%;
+    height: 100%;
     padding-right: 10px;
     box-sizing: border-box;
     table-layout: fixed;
