--- a/arthall/src/main/webapp/css/ticketing.css
+++ b/arthall/src/main/webapp/css/ticketing.css
@@ -2,85 +2,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
 @import url(reset.css);
-@import url(header.css);
-@import url(footer.css);
-@import url(topBtn.css);
 
-.sub__tit{
-    position: relative;
-    height: 350px;
-    background: #ccc;
-}
-.sub__tit h2{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    text-align: center;
-    transform: translateX(-50%);
-}
-
-.sub__container{
-    width: 1260px;
-    height: auto;
-    margin: 0 auto;
-}
-
-.sub__container .container__subClass,
-.sub__container main {float: left;}
-
-.sub__container .container__subClass{
-    width: 200px;
-    height: 100%;
-    background: gold;
-}
-.container__subClass .subClass__tit{
-    height: 150px;
-    line-height: 150px;
-    text-align: center;
-    font-size: 30px;
-    background: skyblue;
-}
-
-.subClass__list li a{
-    display: block;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    transition: all 0.5s;
-}
-.subClass__list li a:hover{
-    color: #7fceff;
-    background: #434343;
-}
-
-main{width: 1060px;}
-
-main .main__siteLoad{padding: 5px;}
-.main__siteLoad a{
-    display: inline-block;
-    font-size: 13px;
-}
-
-main .main__content{
-    padding: 50px 0;
+main{
+    width: 1060px;
     text-align: center;
 }
-
-.content__innerConts .innerConts__tit{
-    font-size: 50px;
-    margin-bottom: 30px;
-}
-
 
 .ticketBox .ticketBox__titArea{
     padding: 0 50px;
     box-sizing: border-box;
-    background: pink;
 }
-.ticketBox .ticketBox__titArea h4{
+.ticketBox .ticketBox__titArea h1{
     float: right;
     width: 300px;
-    background: #ccc;
 }
 
 .ticketBox__ticketBoxInner .ticketBoxInner__tit{
@@ -95,7 +29,6 @@ main .main__content{
     height: 51px;
     line-height: 51px;
     border-bottom: 1px solid #ccc;
-    background: gold;
 }
 .ticketInfo .ticketBoxInner__tit{float: left;}
 .ticketInfo p{float: left;height: 100%;}
@@ -141,8 +74,8 @@ main .main__content{
 }
 .calendarContainer__calendars div:nth-child(2){border-left: 1px solid #4d4d4d;}
 
-.calendarContainer__calendars .sun{color: red;}
-.calendarContainer__calendars .sat{color: blue;}
+.calendarContainer__calendars .sun{color: #d32e2e;}
+.calendarContainer__calendars .sat{color: #3e35ee;}
 .calendarContainer__calendars thead .month{
     height: 50px;
     font-size: 25px;
@@ -168,8 +101,8 @@ main .main__content{
     text-align: center;
     cursor: pointer;
 }
-.calendarContainer__calendars .dates.today span{background: pink; color: #fff;}
-.calendarContainer__calendars .able.active span{background: gold; color:#fff;}
+.calendarContainer__calendars .dates.today span{background: #555; color: #fff;}
+.calendarContainer__calendars .able.active span{background: #d32e2e; color:#fff;}
 .calendarContainer__calendars .dates.disable span{opacity: 0.3; cursor: default;}
 
 
@@ -185,14 +118,18 @@ main .main__content{
     position: absolute;
     top: 0;
     left: 30px;
+    transition: all 0.5s;
     z-index: 3;
+}
+.calBtn > a:hover{
+    color:#d32e2e;
 }
 .calBtn > .calBtn__next{
     left: auto;
     right: 30px;
 }
 .calBtn > a.disable{opacity: 0.3; cursor: default;}
-
+.calBtn > a.disable:hover{color: #000}
 
 
 
@@ -222,6 +159,7 @@ main .main__content{
 }*/
 
 .timeInfo__timeTable .timeTable__list{
+    display: none;
     margin-bottom: 10px;
     padding: 10px 20px;
     text-align: left;
@@ -236,10 +174,10 @@ main .main__content{
     border-top: 1px solid #999;
     word-break: keep-all;
 }
-
+.timeTable__list.active p{border-color: #d32e2e;}
 .timeInfo__timeTable .timeTable__list.active{
     background: #ffc4c4;
-    border-color: red;
+    border-color: #d32e2e;
 }
 
 
@@ -257,7 +195,7 @@ main .main__content{
     margin-right: 10px;
     font-family: "Font Awesome 5 Free";
 }
-.classTable__classList.active{color: red;}
+.classTable__classList.active{color: #d32e2e;}
 .classTable__classList.active .classList__seatClass:before{content:'\f14a';}
 
 .classTable__classList .classList__seatPrice{float: right; margin-left: 10px;}
@@ -270,7 +208,7 @@ main .main__content{
     line-height: 30px;
     text-align: right;
 }
-.classTable__classList.active .classList__seatNumber{display: block; color: red;}
+.classTable__classList.active .classList__seatNumber{display: block; color: #d32e2e;}
 
 
 .tiketInfo{background: #d4d4d4;}
@@ -284,6 +222,7 @@ main .main__content{
 .form__resultBox label{float: left; line-height: 29px;}
 .form__resultBox input{
     float: right;
+    width: 50%;
     height: 29px;
     padding-right: 10px;
     color: #444;
@@ -295,9 +234,15 @@ main .main__content{
     width: 100%;
     height: 100px;
     margin-top: 40px;
-    background: #d80000;
+    background: #d32e2e;
     text-align: center;
     color: #fff;
     font-size: 20px;
+    box-sizing: border-box;
+    transition:all 0.5s;
 }
-/*resultBox__price{display: none;}*/
+.tiketInfo__form .form__submit:hover{
+    background-color:#fff;
+    border:1px solid #d32e2e;
+    color:#d32e2e;
+}
