1. reservForm 추가, 2. paymentForm 추가 3. context.xml main 추가

--- a/arthall/src/main/webapp/css/findPassword.css
+++ b/arthall/src/main/webapp/css/findPassword.css
@@ -8,7 +8,7 @@
 .sub__tit{
     position: relative;
     height: 350px;
-    background:url(../img/topBg/topBg_member.jpg);
+    background:url(../img/topBg/subtest.jpg);
 }
 .sub__tit h2{
     position: absolute;
@@ -130,32 +130,3 @@ form .form__submit:hover{
     color:#fff; 
 }
 
-/*비밀번호찾기 결과창*/
-.innerConts__cont .pwResult{
-    width:500px;
-    height:200px;
-    font-size:16px;
-}
-.innerConts__cont .pwResult span{
-    font-size:24px;
-    font-weight:bold;
-    color:#d32e2e;
-}
-.pwResultBtn{width:500px;height:100px;}
-.pwResultBtn a{
-    display:block;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    margin-bottom: 10px;
-    background: #222;
-    color: #fff;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size:18px;
-    transition:all 0.5s
-}
-.pwResultBtn a:hover{
-    background-color:#d32e2e;
-    color:#fff;
-}
