--- a/arthall/src/main/webapp/css/findID.css
+++ b/arthall/src/main/webapp/css/findID.css
@@ -8,7 +8,7 @@
 .sub__tit{
     position: relative;
     height: 350px;
-    background:url(../img/topBg/topBg_member.jpg);
+    background:url(../img/topBg/subtest.jpg);
 }
 .sub__tit h2{
     position: absolute;
@@ -129,34 +129,4 @@ form .form__submit{
 form .form__submit:hover{
     background:#d32e2e;
     color:#fff; 
-}
-
-/*아이디찾기 결과창*/
-.innerConts__cont .idResult{
-    width:500px;
-    height:200px;
-    font-size:16px;
-}
-.innerConts__cont .idResult span{
-    font-size:24px;
-    font-weight:bold;
-    color:#d32e2e;
-}
-.idResultBtn{width:500px;height:100px;}
-.idResultBtn a{
-    display:block;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    margin-bottom: 10px;
-    background: #222;
-    color: #fff;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size:18px;
-    transition:all 0.5s
-}
-.idResultBtn a:hover{
-    background-color:#d32e2e;
-    color:#fff;
 }
