--- a/arthall/src/main/webapp/css/header.css
+++ b/arthall/src/main/webapp/css/header.css
@@ -20,10 +20,12 @@ header{
     left: 0; 
     top: 0;
     width: 100%;
-    background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0));
+    background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0));
+    background:-ms-linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0));
     color:#bbb;
     z-index: 50;
 }
+header.show{background:rgba(0,0,0,0.7);}
 
 .header-inner{
     position: relative;
