--- a/arthall/src/main/webapp/css/login.css
+++ b/arthall/src/main/webapp/css/login.css
@@ -8,7 +8,7 @@
 .sub__tit{
     position: relative;
     height: 350px;
-    background:url(../img/topBg/topBg_member.jpg);
+    background:url(../img/topBg/subtest.jpg);
 }
 .sub__tit h2{
     position: absolute;
