!! Update js,img,css
play쪽 파일을 조작해브느라 여러 파일을
덮어쓰기 했습니다.
기존 설정들이 변경될 수 있을 것 같습니다.

--- a/arthall/src/main/webapp/css/header.css
+++ b/arthall/src/main/webapp/css/header.css
@@ -153,6 +153,7 @@ header.show{background:rgba(0,0,0,0.7);}
     border:none;
     background: #fff;
 }
+.search .t_box::placeholder{line-height: 30px;}
 .search .submit{
     position:absolute;
     width: 30px;
