--- a/arthall/src/main/webapp/css/footer.css
+++ b/arthall/src/main/webapp/css/footer.css
@@ -49,6 +49,7 @@ footer{
     -moz-appearance:none;
     -o-appearance:none;
 }
+.links__list select::-ms-expand {display:none}
 .links__list select option{color: #999;}
 
 .footerinner__bottom .bottom__left{float: left;}
