--- a/arthall/src/main/webapp/WEB-INF/view/include/main.html.html
+++ b/arthall/src/main/webapp/WEB-INF/view/include/main.html.html
@@ -36,7 +36,7 @@
                                 </ul>
                             </li>
                             <li class="hover">
-                                <a href="#"><span>공연·전시·행사</span></a>
+                                <a href="performList.do"><span>공연·전시·행사</span></a>
                                 <ul>
                                     <li><a href="#">캘린더</a></li>
                                     <li><a href="#">공연정보</a></li>
