마이페이지_회원정보수정_김대영 작업중

--- a/arthall/src/main/webapp/css/myInfo_edit.css
+++ b/arthall/src/main/webapp/css/myInfo_edit.css
@@ -326,7 +326,9 @@ main .main__content{
     color:#fff;
 }
 
-.form_list ul>li.email_conf_area{display: none;}
+.form_list ul>li.email_conf_area{
+	position: relative;
+}
 
 .form_list .btn_yn{
     margin: 3% 0 3% 0;
